@@ -1,4 +1,5 @@
 v0.13
+	* FIX : In case of a failed "Download more", do not delete layer if it was a previously existing one.
 	* FIX : GeoTagged images are drawn to the full size of GeoImageDock
 	* FIX : Background images with a too long hash filename were not cached.
 	* FIX : Tracklayers are (after asking the user) made writeable when opening geotagged images to it
